--- a/BlogApp/src/index.html
+++ b/BlogApp/src/index.html
@@ -11,7 +11,7 @@
     <!-- Header Part -->
     <header>
         <nav class="bg-blue-500 p-4 text-white font-serif cursor-pointer">
-            <div class="container mx-auto flex justify-between">
+            <div class="container px-10 mx-auto flex justify-between">
                 <h1 class="text-2xl font-semibold ">
                     PWSkills Blog
                 </h1>
